--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "random",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon",
+    "build": "npx tsc",
+    "start": "ts-node main.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "Sachin Beniwal",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "zod": "^3.22.4"
   },
